// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayButton should render audio correctly without duration details 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    class="Button-sc-34e3rb-0 kwlSXK"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Play audio, "Dog barks at cat."
    </span>
    <div
      aria-hidden="true"
      class="IconWrapper-sc-34e3rb-1 bShuUP"
    >
      <svg
        aria-hidden="true"
        class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
        focusable="false"
        height="12px"
        viewBox="0 0 13 12"
        width="13px"
      >
        <path
          d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
        />
        <path
          d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`PlayButton should render audio indicator correctly 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    class="Button-sc-34e3rb-0 kwlSXK foo"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Play audio, "Dog barks at cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="IconWrapper-sc-34e3rb-1 jGavfg"
    >
      <svg
        aria-hidden="true"
        class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
        focusable="false"
        height="12px"
        viewBox="0 0 13 12"
        width="13px"
      >
        <path
          d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
        />
        <path
          d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
        />
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="TimeDuration-sc-34e3rb-2 cZLyLe"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
</div>
`;

exports[`PlayButton should render video by default 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    class="Button-sc-34e3rb-0 kwlSXK"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Play video, "Dog chases cat."
    </span>
    <div
      aria-hidden="true"
      class="IconWrapper-sc-34e3rb-1 bShuUP"
    >
      <svg
        aria-hidden="true"
        class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
        focusable="false"
        height="12px"
        viewBox="0 0 32 32"
        width="12px"
      >
        <polygon
          points="3,32 29,16 3,0"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`PlayButton should render video correctly with duration and guidance message 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    class="Button-sc-34e3rb-0 kwlSXK"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Guidance: May contain strong language that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="IconWrapper-sc-34e3rb-1 jGavfg"
    >
      <svg
        aria-hidden="true"
        class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
        focusable="false"
        height="12px"
        viewBox="0 0 32 32"
        width="12px"
      >
        <polygon
          points="3,32 29,16 3,0"
        />
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="TimeDuration-sc-34e3rb-2 cZLyLe"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
</div>
`;

exports[`PlayButton should render video correctly without duration details 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    class="Button-sc-34e3rb-0 kwlSXK"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Play video, "Dog chases cat."
    </span>
    <div
      aria-hidden="true"
      class="IconWrapper-sc-34e3rb-1 bShuUP"
    >
      <svg
        aria-hidden="true"
        class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
        focusable="false"
        height="12px"
        viewBox="0 0 32 32"
        width="12px"
      >
        <polygon
          points="3,32 29,16 3,0"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`PlayButton should render video indicator correctly 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    class="Button-sc-34e3rb-0 kwlSXK foo"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Play video, "Dog chases cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="IconWrapper-sc-34e3rb-1 jGavfg"
    >
      <svg
        aria-hidden="true"
        class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
        focusable="false"
        height="12px"
        viewBox="0 0 32 32"
        width="12px"
      >
        <polygon
          points="3,32 29,16 3,0"
        />
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="TimeDuration-sc-34e3rb-2 cZLyLe"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
</div>
`;
